# haskell-text-searcher

./: CHANGELOG.md  README.md  text-searcher.cabal
src/: Main.hs  TextSearcher.hs
test/: TestTextSearcher.hs
